force-app/main/default/objects/Customer_Satisfaction__c/Customer_Satisfaction__c.object-meta.xml
<CustomObject>
    <description>Custom object designed to capture and track customer feedback and satisfaction ratings following support case resolution.</description>
    <label>Customer Satisfaction</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Satisfaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Satisfaction Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>