force-app/main/default/objects/Customer_Satisfaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Satisfaction Records</relationshipLabel>
    <relationshipName>Customer_Satisfaction_Records</relationshipName>
    <type>Lookup</type>
</CustomField>