force-app/main/default/objects/Customer_Satisfaction__c/fields/Close_date__c.field-meta.xml
<CustomField>
    <fullName>Close_date__c</fullName>
    <description>Close date of the survey</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Close date</label>
    <type>Date</type>
</CustomField>