force-app/main/default/objects/Customer_Satisfaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Satisfaction Records</relationshipLabel>
    <relationshipName>Customer_Satisfaction_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>