force-app/main/default/objects/Customer_Satisfaction__c/fields/Customer_comment__c.field-meta.xml
<CustomField>
    <fullName>Customer_comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer comment</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>