force-app/main/default/objects/Customer_Satisfaction__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Notes</label>
    <type>TextArea</type>
</CustomField>