force-app/main/default/objects/Customer_Satisfaction__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Represents 1-5 rating of the customers satisfaction</description>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Satisfaction_Rating</valueSetName>
    </valueSet>
</CustomField>