force-app/main/default/objects/Customer_Satisfaction__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start date</label>
    <type>Date</type>
</CustomField>