force-app/main/default/objects/Customer_Satisfaction__c/fields/Support_Case__c.field-meta.xml
<CustomField>
    <fullName>Support_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Support Case</label>
    <referenceTo>Support_Case__c</referenceTo>
    <relationshipLabel>Customer Satisfaction Records</relationshipLabel>
    <relationshipName>Customer_Satisfaction_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>